chore(conf): configure Mongo driver connection options (#438)

--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -16,107 +16,15 @@ microservice-chart:
         repository: pagopapcommonacr.azurecr.io/pagopaecommercetransactionsservice
         tag: "latest"
         pullPolicy: Always
-    envConfig:
-      MONGO_HOST: pagopa-p-weu-ecommerce-cosmos-account.mongo.cosmos.azure.com
-      MONGO_USERNAME: pagopa-p-weu-ecommerce-cosmos-account
-      MONGO_PORT: "10255"
-      MONGO_SSL_ENABLED: "true"
-      REDIS_HOST: pagopa-p-weu-ecommerce-redis.redis.cache.windows.net
-      REDIS_PORT: "6380"
-      REDIS_SSL_ENABLED: "true"
-      NODO_HOSTNAME: https://api.platform.pagopa.it
-      NODE_FOR_PSP_URI: /nodo/node-for-psp/v1
-      NODO_PER_PM_URI: /nodo/nodo-per-pm/v2
-      NODO_READ_TIMEOUT: "14000"
-      NODO_CONNECTION_TIMEOUT: "14000"
-      NODO_PARALLEL_REQUESTS: "5"
-      NODO_ALL_CCP_ON_TRANSFER_IBAN_ENABLED: "true"
-      NODO_ECOMMERCE_CLIENT_ID: ecomm
-      ECOMMERCE_PAYMENT_METHODS_URI: https://api.platform.pagopa.it/ecommerce/payment-methods-service/v1
-      ECOMMERCE_PAYMENT_METHODS_READ_TIMEOUT: "10000"
-      ECOMMERCE_PAYMENT_METHODS_CONNECTION_TIMEOUT: "10000"
-      WALLET_URI: https://api.platform.pagopa.it/payment-wallet-for-ecommerce/v1
-      WALLET_READ_TIMEOUT: "10000"
-      WALLET_CONNECTION_TIMEOUT: "10000"
-      PAYMENT_TRANSACTIONS_GATEWAY_URI: https://api.platform.pagopa.it/payment-transactions-gateway/internal/v1
-      PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT: "10000"
-      PAYMENT_TRANSACTIONS_GATEWAY_CONNECTION_TIMEOUT: "10000"
-      NOTIFICATIONS_SERVICE_URI: https://api.platform.pagopa.it/ecommerce/notifications-service/v1
-      NOTIFICATIONS_SERVICE_READ_TIMEOUT: "10000"
-      NOTIFICATIONS_SERVICE_CONNECTION_TIMEOUT: "10000"
-      TRANSACTION_EXPIRATION_QUEUE_NAME: pagopa-p-weu-ecommerce-transactions-expiration-queue
-      TRANSACTION_CLOSE_PAYMENT_RETRY_QUEUE_NAME: pagopa-p-weu-ecommerce-transactions-close-payment-retry-queue
-      TRANSACTION_CLOSE_PAYMENT_QUEUE_NAME: pagopa-p-weu-ecommerce-transactions-close-payment-queue
-      TRANSACTION_REFUND_QUEUE_NAME: pagopa-p-weu-ecommerce-transactions-refund-queue
-      TRANSACTION_NOTIFICATIONS_QUEUE_NAME: pagopa-p-weu-ecommerce-transaction-notifications-queue
-      TRANSACTIONS_AUTHORIZATION_REQUESTED_QUEUE_NAME: pagopa-d-weu-ecommerce-transaction-auth-requested-queue
-      TRANSIENT_QUEUES_TTL_SECONDS: "2592000"
-      PAYMENT_TOKEN_VALIDITY_TIME: "900"
-      TRANSACTIONS_RETRY_OFFSET: "60"
-      CLOSURE_RETRY_INTERVAL: "30"
-      WEB_LOGGING_LEVEL: "off"
-      SERVICE_LOGGING_LEVEL: "info"
-      PERSONAL_DATA_VAULT_API_BASE_PATH: "https://api.tokenizer.pdv.pagopa.it/tokenizer/v1"
-      WARMUP_REQUEST_NEW_TRANSACTION_NOTICE_CODE_PREFIX: "3020"
-      LOGO_CARD_BRANDING_MAPPING: >
-        { VISA:'https://assets.cdn.platform.pagopa.it/creditcard/visa.png', MASTERCARD:'https://assets.cdn.platform.pagopa.it/creditcard/mastercard.png', DINERS:'https://assets.cdn.platform.pagopa.it/creditcard/diners.png', MAESTRO:'https://assets.cdn.platform.pagopa.it/creditcard/maestro.png', AMEX:'https://assets.cdn.platform.pagopa.it/creditcard/amex.png', UNKNOWN:'https://assets.cdn.platform.pagopa.it/creditcard/generic.png' }
-
-      LOGO_NPG_PAYMENT_CIRCUIT_MAPPING: >
-        { VISA:'https://assets.cdn.platform.pagopa.it/creditcard/visa.png', MC:'https://assets.cdn.platform.pagopa.it/creditcard/mastercard.png', DINERS:'https://assets.cdn.platform.pagopa.it/creditcard/diners.png', AMEX:'https://assets.cdn.platform.pagopa.it/creditcard/amex.png', UNKNOWN:'https://assets.cdn.platform.pagopa.it/creditcard/generic.png', PAYPAL:'https://assets.cdn.platform.pagopa.it/apm/paypal.png' }
-
-      SERVER_ERROR_INCLUDE_STACKTRACE: "never"
-      OTEL_RESOURCE_ATTRIBUTES: "service.name=pagopa-ecommerce-transactions-service-blue,deployment.environment=prod"
-      OTEL_EXPORTER_OTLP_ENDPOINT: "http://otel-collector.elastic-system.svc:4317"
-      OTEL_TRACES_EXPORTER: otlp
-      OTEL_METRICS_EXPORTER: otlp
-      OTEL_LOGS_EXPORTER: none
-      OTEL_TRACES_SAMPLER: "always_on"
-      ECS_SERVICE_NAME: pagopa-ecommerce-transactions-service-blue
-      ECS_SERVICE_ENVIRONMENT: "prod"
-      NPG_URI: "https://localhost/npg"
-      NPG_READ_TIMEOUT: "10000"
-      NPG_CONNECTION_TIMEOUT: "10000"
-      TRANSACTION_DOCUMENT_TTL: "600"
-      NPG_CARDS_PSP_LIST: "" #TODO to be filled with psp id list that are expected to be present into psp api keys configuration
-      NPG_AUTHORIZATION_REQUEST_TIMEOUT_SECONDS: "60"
-      CHECKOUT_BASE_PATH: "https://checkout.pagopa.it"
-      ECOMMERCE_EVENT_VERSION: "V1"
-      SEND_PAYMENT_RESULT_FOR_TX_EXPIRED_ENABLED: "true"
-      SESSION_URL_BASEPATH: "https://checkout.pagopa.it"
-      SESSION_URL_OUTCOME_SUFFIX: "/ecommerce-fe/esito#clientId={clientId}&transactionId={transactionId}&sessionToken={sessionToken}"
-      SESSION_URL_CANCEL_SUFFIX: "/ecommerce-fe/cancel"
-      SESSION_URL_NOTIFICATION_URL: "https://api.platform.pagopa.it/ecommerce/npg/notifications/v1/sessions/{orderId}/outcomes?sessionToken={sessionToken}"
-      JWT_NPG_NOTIFICATION_VALIDITY_TIME: "900"
-      CHECKOUT_REDIRECT_PSP_LIST: ""
-      NODE_FORWARDER_URL: "https://api.platform.pagopa.it/pagopa-node-forwarder/api/v1"
-    CHECKOUT_REDIRECT_URL_MAPPING: >
-      { PSP1:'http://localhost' }
-
-      NODE_FORWARDER_READ_TIMEOUT: "10000" NODE_FORWARDER_CONNECTION_TIMEOUT: "10000" CHECKOUT_REDIRECT_LOGO_MAPPING: >
-
-
-
-
-
-
-
-
-
-        { PSP1:'https://host/assets/logo.png' }
-    envSecret:
-      MONGO_PASSWORD: mongo-ecommerce-password
-      REDIS_PASSWORD: redis-ecommerce-password
-      NODO_CONNECTION_STRING: nodo-connection-string
-      PAYMENT_TRANSACTIONS_GATEWAY_API_KEY: payment-transactions-gateway-api-key
-      JWT_ECOMMERCE_SECRET: sessions-jwt-secret
-      PERSONAL_DATA_VAULT_API_KEY: personal-data-vault-api-key
-      OTEL_EXPORTER_OTLP_HEADERS: elastic-otel-token-header
-      ECOMMERCE_PAYMENT_METHODS_APY_KEY: payment-method-api-key
-      WALLET_API_KEY: wallet-api-key
-      NPG_API_KEY: npg-api-key
-      NPG_CARDS_PSP_KEYS: npg-cards-psp-keys
-      JWT_NPG_NOTIFICATION_SECRET: npg-notification-signing-key
-      NODE_FORWARDER_API_KEY: node-forwarder-api-key
+      envConfig:
+        NODO_ECOMMERCE_CLIENT_ID: ecomm-blue
+        TRANSACTION_EXPIRATION_QUEUE_NAME: pagopa-p-weu-ecommerce-transactions-expiration-queue-b
+        TRANSACTION_CLOSE_PAYMENT_RETRY_QUEUE_NAME: pagopa-p-weu-ecommerce-transactions-close-payment-retry-queue-b
+        TRANSACTION_CLOSE_PAYMENT_QUEUE_NAME: pagopa-p-weu-ecommerce-transactions-close-payment-queue-b
+        TRANSACTION_REFUND_QUEUE_NAME: pagopa-p-weu-ecommerce-transactions-refund-queue-b
+        TRANSACTION_NOTIFICATIONS_QUEUE_NAME: pagopa-p-weu-ecommerce-transaction-notifications-queue-b
+        OTEL_RESOURCE_ATTRIBUTES: "service.name=pagopa-ecommerce-transactions-service-blue,deployment.environment=prod"
+        ECS_SERVICE_NAME: pagopa-ecommerce-transactions-service-blue
   image:
     repository: pagopapcommonacr.azurecr.io/pagopaecommercetransactionsservice
     tag: "1.20.3"
@@ -187,6 +95,14 @@ microservice-chart:
     MONGO_USERNAME: pagopa-p-weu-ecommerce-cosmos-account
     MONGO_PORT: "10255"
     MONGO_SSL_ENABLED: "true"
+    MONGO_MIN_POOL_SIZE: "0"
+    MONGO_MAX_POOL_SIZE: "50"
+    MONGO_MAX_IDLE_TIMEOUT_MS: "600000"
+    MONGO_CONNECTION_TIMEOUT_MS: "2000"
+    MONGO_SOCKET_TIMEOUT_MS: "10000"
+    MONGO_SERVER_SELECTION_TIMEOUT_MS: "2000"
+    MONGO_WAITING_QUEUE_MS: "2000"
+    MONGO_HEARTBEAT_FREQUENCY_MS: "5000"
     REDIS_HOST: pagopa-p-weu-ecommerce-redis.redis.cache.windows.net
     REDIS_PORT: "6380"
     REDIS_SSL_ENABLED: "true"
@@ -215,7 +131,6 @@ microservice-chart:
     TRANSACTION_CLOSE_PAYMENT_QUEUE_NAME: pagopa-p-weu-ecommerce-transactions-close-payment-queue
     TRANSACTION_REFUND_QUEUE_NAME: pagopa-p-weu-ecommerce-transactions-refund-queue
     TRANSACTION_NOTIFICATIONS_QUEUE_NAME: pagopa-p-weu-ecommerce-transaction-notifications-queue
-    TRANSACTIONS_AUTHORIZATION_REQUESTED_QUEUE_NAME: pagopa-d-weu-ecommerce-transaction-auth-requested-queue
     TRANSIENT_QUEUES_TTL_SECONDS: "2592000"
     PAYMENT_TOKEN_VALIDITY_TIME: "900"
     TRANSACTIONS_RETRY_OFFSET: "60"
