--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,14 @@ MONGO_HOST="pagopa-ecommerce-mongo"
 MONGO_PORT=27017
 MONGO_USERNAME=admin
 MONGO_PASSWORD=password
+MONGO_MIN_POOL_SIZE=0
+MONGO_MAX_POOL_SIZE=20
+MONGO_MAX_IDLE_TIMEOUT_MS=60000
+MONGO_CONNECTION_TIMEOUT_MS=1000
+MONGO_SOCKET_TIMEOUT_MS=10000
+MONGO_SERVER_SELECTION_TIMEOUT_MS=2000
+MONGO_WAITING_QUEUE_MS=2000
+MONGO_HEARTBEAT_FREQUENCY_MS=5000
 
 REDIS_HOST="pagopa-ecommerce-redis"
 REDIS_PORT=6379
