feat(deps): [CHK-2534] - update opentelemetry agent to v2.1.0 (#444)
* feat(deps): update opentelemetry agent to v1.32.0

* feat(o11y): update opentelemetry agent version to v2.1.0

* trigger CR pipeline

---------

Co-authored-by: Pietro Tota <pietro.tota@pagopa.it>

--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -128,6 +128,7 @@ microservice-chart:
     ECS_SERVICE_ENVIRONMENT: "dev"
     OTEL_RESOURCE_ATTRIBUTES: "service.name=pagopa-ecommerce-transactions-service,deployment.environment=dev"
     OTEL_EXPORTER_OTLP_ENDPOINT: "http://otel-collector.elastic-system.svc:4317"
+    OTEL_EXPORTER_OTLP_PROTOCOL: grpc
     OTEL_TRACES_EXPORTER: otlp
     OTEL_METRICS_EXPORTER: otlp
     OTEL_LOGS_EXPORTER: none
