refactor(npg): add error code field to `PATCH /auth-requests` for NPG (#440)
* refactor(npg): add error code field to `PATCH /auth-requests` for NPG

* fix(refactoring): take error and authorization code as received by NPG

* trigger CR pipeline

---------

Co-authored-by: Pietro Tota <pietro.tota@pagopa.it>

--- a/api-spec/v1/transactions-api.yaml
+++ b/api-spec/v1/transactions-api.yaml
@@ -1177,6 +1177,9 @@ components:
         authorizationCode:
           type: string
           description: Authorization code
+        errorCode:
+          type: string
+          description: Error code
         paymentEndToEndId:
           description: Circuit unique transaction ID
           type: string
