--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -150,7 +150,7 @@ microservice-chart:
     CHECKOUT_REDIRECT_PSP_LIST: "BCITITMM"
     NODE_FORWARDER_URL: "https://api.uat.platform.pagopa.it/pagopa-node-forwarder/api/v1"
     CHECKOUT_REDIRECT_URL_MAPPING: >
-      { BCITITMM:'***REMOVED***' }
+      { BCITITMM:'http://url' }
 
     NODE_FORWARDER_READ_TIMEOUT: "10000"
     NODE_FORWARDER_CONNECTION_TIMEOUT: "10000"
