chore(refactoring): refactor CheckoutRedirect to Redirect

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -94,9 +94,9 @@ sessionUrl.notificationUrl=${SESSION_URL_NOTIFICATION_URL}
 transactionDocument.ttl=${TRANSACTION_DOCUMENT_TTL}
 
 
-checkout.redirect.pspList=${CHECKOUT_REDIRECT_PSP_LIST}
-checkout.redirect.pspUrlMapping=${CHECKOUT_REDIRECT_URL_MAPPING}
-checkout.redirect.pspLogoMapping=${CHECKOUT_REDIRECT_LOGO_MAPPING}
+redirect.pspList=${REDIRECT_PSP_LIST}
+redirect.pspUrlMapping=${REDIRECT_URL_MAPPING}
+redirect.pspLogoMapping=${REDIRECT_LOGO_MAPPING}
 
 node.forwarder.apiKey=${NODE_FORWARDER_API_KEY}
 node.forwarder.url=${NODE_FORWARDER_URL}
