--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -170,7 +170,7 @@ microservice-chart:
     NPG_CARDS_PSP_KEYS: npg-cards-psp-keys
     JWT_NPG_NOTIFICATION_SECRET: npg-notification-signing-key
     NODE_FORWARDER_API_KEY: node-forwarder-api-key
-    REDIRECT_URL_MAPPING: checkout-redirect-url-mapping
+    REDIRECT_URL_MAPPING: redirect-url-mapping
   keyvault:
     name: "pagopa-d-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
