--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -92,7 +92,7 @@ sessionUrl.notificationUrl=${SESSION_URL_NOTIFICATION_URL}
 transactionDocument.ttl=${TRANSACTION_DOCUMENT_TTL}
 
 
-redirect.pspList=${REDIRECT_PSP_LIST}
+redirect.paymentTypeCodeList=${REDIRECT_PAYMENT_TYPE_CODE_LIST}
 redirect.pspUrlMapping=${REDIRECT_URL_MAPPING}
 
 node.forwarder.apiKey=${NODE_FORWARDER_API_KEY}
