--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -81,7 +81,7 @@ SESSION_URL_NOTIFICATION_URL:"http://localhost/ecommerce/npg/notifications/v1/se
 
 node.forwarder.apiKey=node-forwarder-api-key
 node.forwarder.url=http://localhost/checkout-redirect/forwarder
-redirect.pspList=psp1-redirect,psp2-redirect
+redirect.paymentTypeCodeList=psp1-redirect,psp2-redirect
 redirect.pspUrlMapping={"psp1-redirect":'http://localhost:8096/redirections',"psp2-redirect":'http://localhost:8096/redirections'}
 node.forwarder.readTimeout=10000
 node.forwarder.connectionTimeout=10000
