feat: add env properties + env example

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -80,6 +80,12 @@ npg.connectionTimeout=${NPG_CONNECTION_TIMEOUT}
 npg.client.apiKey=${NPG_API_KEY}
 npg.authorization.cards.keys=${NPG_CARDS_PSP_KEYS}
 npg.authorization.cards.pspList=${NPG_CARDS_PSP_LIST}
+npg.authorization.paypal.keys=${NPG_PAYPAL_PSP_KEYS}
+npg.authorization.paypal.pspList=${NPG_PAYPAL_PSP_LIST}
+npg.authorization.bancomatpay.keys=${NPG_BANCOMATPAY_PSP_KEYS}
+npg.authorization.bancomatpay.pspList=${NPG_BANCOMATPAY_PSP_LIST}
+npg.authorization.mybank.keys=${NPG_MYBANK_PSP_KEYS}
+npg.authorization.mybank.pspList=${NPG_MYBANK_PSP_LIST}
 npg.authorization.request.timeout.seconds=${NPG_AUTHORIZATION_REQUEST_TIMEOUT_SECONDS}
 ecommerce.event.version=${ECOMMERCE_EVENT_VERSION}
 
