--- a/.env.example
+++ b/.env.example
@@ -78,6 +78,12 @@ NPG_CONNECTION_TIMEOUT=10000
 NPG_API_KEY="npg-api-key"
 NPG_CARDS_PSP_LIST=CIPBITMM,BNLIITRR,BCITITMM,UNCRITMM,BPPIITRRXXX,PPAYITR1XXX
 NPG_CARDS_PSP_KEYS={"CIPBITMM":"CIPBITMM-api-key","BNLIITRR":"BNLIITRR-api-key","BCITITMM":"BCITITMM-api-key","UNCRITMM":"UNCRITMM-api-key","BPPIITRRXXX":"BPPIITRRXXX-api-key","PPAYITR1XXX":"PPAYITR1XXX-api-key"}
+NPG_PAYPAL_PSP_LIST=BCITITMM
+NPG_PAYPAL_PSP_KEYS={"BCITITMM":"BCITITMM-api-key"}
+NPG_BANCOMATPAY_PSP_LIST=BCITITMM
+NPG_BANCOMATPAY_PSP_KEYS=={"BCITITMM":"BCITITMM-api-key"}
+NPG_MYBANK_PSP_LIST=BCITITMM
+NPG_MYBANK_PSP_KEYS=={"BCITITMM":"BCITITMM-api-key"}
 TRANSACTION_DOCUMENT_TTL=600
 ECOMMERCE_EVENT_VERSION=V2
 
