--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -69,6 +69,12 @@ npg.connectionTimeout=10000
 npg.client.apiKey=npg_key
 npg.authorization.cards.keys={"psp1":"key1","psp2":"key2"}
 npg.authorization.cards.pspList=psp1,psp2
+npg.authorization.paypal.keys={"psp1":"key1","psp2":"key2"}
+npg.authorization.paypal.pspList=psp1,psp2
+npg.authorization.bancomatpay.keys={"psp1":"key1","psp2":"key2"}
+npg.authorization.bancomatpay.pspList=psp1,psp2
+npg.authorization.mybank.keys={"psp1":"key1","psp2":"key2"}
+npg.authorization.mybank.pspList=psp1,psp2
 npg.authorization.request.timeout.seconds=600
 ecommerce.event.version=V2
 transactionDocument.ttl=1000
