fix: make prod env values optional

--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -155,9 +155,9 @@ microservice-chart:
     NPG_READ_TIMEOUT: "10000"
     NPG_CONNECTION_TIMEOUT: "10000"
     NPG_CARDS_PSP_LIST: "BCITITMM,CIPBITMM,BIC36019,UNCRITMM,BPPIITRRXXX,PPAYITR1XXX"
-    NPG_PAYPAL_PSP_LIST: "BCITITMM"
-    NPG_MYBANK_PSP_LIST: "BCITITMM"
-    NPG_BANCOMATPAY_PSP_LIST: "BCITITMM"
+    NPG_PAYPAL_PSP_LIST: ""
+    NPG_MYBANK_PSP_LIST: ""
+    NPG_BANCOMATPAY_PSP_LIST: ""
     NPG_AUTHORIZATION_REQUEST_TIMEOUT_SECONDS: "60"
     TRANSACTION_DOCUMENT_TTL: "600"
     CHECKOUT_BASE_PATH: "https://checkout.pagopa.it"
