--- a/.env.example
+++ b/.env.example
@@ -81,9 +81,9 @@ NPG_CARDS_PSP_KEYS={"CIPBITMM":"CIPBITMM-api-key","BNLIITRR":"BNLIITRR-api-key",
 NPG_PAYPAL_PSP_LIST=BCITITMM
 NPG_PAYPAL_PSP_KEYS={"BCITITMM":"BCITITMM-api-key"}
 NPG_BANCOMATPAY_PSP_LIST=BCITITMM
-NPG_BANCOMATPAY_PSP_KEYS=={"BCITITMM":"BCITITMM-api-key"}
+NPG_BANCOMATPAY_PSP_KEYS={"BCITITMM":"BCITITMM-api-key"}
 NPG_MYBANK_PSP_LIST=BCITITMM
-NPG_MYBANK_PSP_KEYS=={"BCITITMM":"BCITITMM-api-key"}
+NPG_MYBANK_PSP_KEYS={"BCITITMM":"BCITITMM-api-key"}
 TRANSACTION_DOCUMENT_TTL=600
 ECOMMERCE_EVENT_VERSION=V2
 
