fix: update env local adding missing env variable

--- a/.env.example
+++ b/.env.example
@@ -103,3 +103,4 @@ NODE_FORWARDER_URL=http://localhost:8096
 REDIRECT_URL_MAPPING={'REDIRECT-RBPR':'http://localhost:8096/redirections'}
 NODE_FORWARDER_READ_TIMEOUT=10000
 NODE_FORWARDER_CONNECTION_TIMEOUT=10000
+NPG_AUTHORIZATION_REQUEST_TIMEOUT_SECONDS=600
