feat(npg-apm): api keys configuration for APM (#465)
* feat(npg-apm): api keys configuration for APM

* feat: add env properties + env example

* feat: add configuration logic + tests

* fix: make prod env values optional

* fix: update jira task ref

* fix: change eCommerce local branch ref for test purpose

* trigger CR pipeline

* fix: env example

* trigger CR pipeline

* fix: refactoring after commons pr update

* fix: update commons version

* Update .devops/code-review-pipelines.yml

* fix: refactoring

* fix: update env local adding missing env variable

* fix: update env local adding missing env variable

--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -67,8 +67,14 @@ npg.uri=http://localhost/npg
 npg.readTimeout=10000
 npg.connectionTimeout=10000
 npg.client.apiKey=npg_key
-npg.authorization.cards.keys={"psp1":"key1","psp2":"key2"}
+npg.authorization.cards.keys={"psp1":"cards-key1","psp2":"cards-key2"}
 npg.authorization.cards.pspList=psp1,psp2
+npg.authorization.paypal.keys={"psp1":"paypal-key1","psp2":"paypal-key2"}
+npg.authorization.paypal.pspList=psp1,psp2
+npg.authorization.bancomatpay.keys={"psp1":"bancomatpay-key1","psp2":"bancomatpay-key2"}
+npg.authorization.bancomatpay.pspList=psp1,psp2
+npg.authorization.mybank.keys={"psp1":"mybank-key1","psp2":"mybank-key2"}
+npg.authorization.mybank.pspList=psp1,psp2
 npg.authorization.request.timeout.seconds=600
 ecommerce.event.version=V2
 transactionDocument.ttl=1000
