--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,7 +34,7 @@ wallet.readTimeout=${WALLET_READ_TIMEOUT}
 wallet.connectionTimeout=${WALLET_CONNECTION_TIMEOUT}
 wallet.apiKey=${WALLET_API_KEY}
 
-azurestorage.queues.walletusage.connectionstring=${WALLET_USAGE_QUEUE_NAME}
+azurestorage.queues.walletusage.connectionstring=${WALLET_USAGE_QUEUE_CONNECTION_STRING}
 azurestorage.queues.walletusage.name=${WALLET_USAGE_QUEUE_NAME}
 
 
