--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,9 +34,8 @@ wallet.readTimeout=${WALLET_READ_TIMEOUT}
 wallet.connectionTimeout=${WALLET_CONNECTION_TIMEOUT}
 wallet.apiKey=${WALLET_API_KEY}
 
-azurestorage.queues.walletusage.connectionstring=${WALLET_USAGE_QUEUE_CONNECTION_STRING}
+azurestorage.wallet.connectionstring=${WALLET_STORAGE_CONNECTION_STRING}
 azurestorage.queues.walletusage.name=${WALLET_USAGE_QUEUE_NAME}
-
 
 notificationsService.uri=${NOTIFICATIONS_SERVICE_URI}
 notificationsService.readTimeout=${NOTIFICATIONS_SERVICE_READ_TIMEOUT}
