feat: save user id into transaction activated event (#470)
* feat: save user id into transaction activated event

* trigger CR pipeline

* Update api-spec/v2/transactions-api.yaml

Co-authored-by: Giovanni Berti <giovanni.berti@pagopa.it>

---------

Co-authored-by: Giovanni Berti <giovanni.berti@pagopa.it>

--- a/api-spec/v2/transactions-api.yaml
+++ b/api-spec/v2/transactions-api.yaml
@@ -36,6 +36,12 @@ paths:
           description: NPG correlation id
           schema:
             $ref: '#/components/schemas/CorrelationId'
+        - in: header
+          name: x-user-id
+          required: false
+          description: User id (valued for authenticated payments)
+          schema:
+            $ref: '#/components/schemas/UserId'
 
       summary: Make a new transaction
       requestBody:
@@ -265,6 +271,10 @@ components:
         - IO
         - CHECKOUT
         - CHECKOUT_CART
+    UserId:
+      description: unique user identifier
+      type: string
+      format: uuid
     CorrelationId:
       description: correlationId
       type: string
