--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -111,8 +111,9 @@ microservice-chart:
     TRANSACTION_REFUND_QUEUE_NAME: pagopa-d-weu-ecommerce-transactions-refund-queue
     TRANSACTION_NOTIFICATIONS_QUEUE_NAME: pagopa-d-weu-ecommerce-transaction-notifications-queue
     TRANSACTIONS_AUTHORIZATION_REQUESTED_QUEUE_NAME: pagopa-d-weu-ecommerce-transaction-auth-requested-queue
-    FEATURE_WALLETUSAGE_ENABLED: true
+    FEATURE_WALLET_USAGE_ENABLED: true
     WALLET_USAGE_QUEUE_NAME: pagopa-d-weu-wallet-usage-update-queue
+    WALLET_USAGE_QUEUE_TTL: "3600"
     PAYMENT_TOKEN_VALIDITY_TIME: "900"
     TRANSACTIONS_RETRY_OFFSET: "60"
     CLOSURE_RETRY_INTERVAL: "30"
