--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,9 +34,10 @@ wallet.readTimeout=${WALLET_READ_TIMEOUT}
 wallet.connectionTimeout=${WALLET_CONNECTION_TIMEOUT}
 wallet.apiKey=${WALLET_API_KEY}
 
-feature.walletusage.enabled=${FEATURE_WALLETUSAGE_ENABLED}
+feature.walletusage.enabled=${FEATURE_WALLET_USAGE_ENABLED}
 azurestorage.wallet.connectionstring=${WALLET_STORAGE_CONNECTION_STRING}
 azurestorage.queues.walletusage.name=${WALLET_USAGE_QUEUE_NAME}
+azurestorage.queues.walletusage.ttlSeconds=${WALLET_USAGE_QUEUE_TTL:3600}
 
 notificationsService.uri=${NOTIFICATIONS_SERVICE_URI}
 notificationsService.readTimeout=${NOTIFICATIONS_SERVICE_READ_TIMEOUT}
