--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,7 +34,7 @@ wallet.readTimeout=${WALLET_READ_TIMEOUT}
 wallet.connectionTimeout=${WALLET_CONNECTION_TIMEOUT}
 wallet.apiKey=${WALLET_API_KEY}
 
-feature.walletusage.enabled=${FEATURE_WALLET_USAGE_ENABLED}
+feature.walletusage.enabled=${FEATURE_WALLET_USAGE_ENABLED:false}
 azurestorage.wallet.connectionstring=${WALLET_STORAGE_CONNECTION_STRING}
 azurestorage.queues.walletusage.name=${WALLET_USAGE_QUEUE_NAME}
 azurestorage.queues.walletusage.ttlSeconds=${WALLET_USAGE_QUEUE_TTL:3600}
