[CHK-2710] Wallet Last Usage implementation (#469)
* implemented WalletAsyncQueueClient and wallet usage event firing

* add wallet async queue client

* add wallet async queue client

* add wallet usage feature flags

* add ttl on wallet queue producer

* fix logging with square brackets

* set default for FEATURE_WALLET_USAGE_ENABLED feature flag

* enabled wallet usage feature on tests

* fix helm boolean value

* fix helm boolean value

--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -24,6 +24,7 @@ microservice-chart:
         TRANSACTION_REFUND_QUEUE_NAME: pagopa-u-weu-ecommerce-transactions-refund-queue-b
         TRANSACTION_NOTIFICATIONS_QUEUE_NAME: pagopa-u-weu-ecommerce-transaction-notifications-queue-b
         TRANSACTIONS_AUTHORIZATION_REQUESTED_QUEUE_NAME: pagopa-u-weu-ecommerce-transaction-auth-requested-queue-b
+        WALLET_USAGE_QUEUE_NAME: pagopa-u-weu-wallet-usage-update-queue-b
         OTEL_RESOURCE_ATTRIBUTES: "service.name=pagopa-ecommerce-transactions-service-blue,deployment.environment=uat"
         ECS_SERVICE_NAME: pagopa-ecommerce-transactions-service-blue
   image:
@@ -127,6 +128,9 @@ microservice-chart:
     TRANSACTION_REFUND_QUEUE_NAME: pagopa-u-weu-ecommerce-transactions-refund-queue
     TRANSACTION_NOTIFICATIONS_QUEUE_NAME: pagopa-u-weu-ecommerce-transaction-notifications-queue
     TRANSACTIONS_AUTHORIZATION_REQUESTED_QUEUE_NAME: pagopa-u-weu-ecommerce-transaction-auth-requested-queue
+    FEATURE_WALLET_USAGE_ENABLED: "true"
+    WALLET_USAGE_QUEUE_NAME: pagopa-u-weu-wallet-usage-update-queue
+    WALLET_USAGE_QUEUE_TTL: "3600"
     PAYMENT_TOKEN_VALIDITY_TIME: "900"
     TRANSACTIONS_RETRY_OFFSET: "60"
     CLOSURE_RETRY_INTERVAL: "30"
@@ -186,6 +190,7 @@ microservice-chart:
     NPG_PAYPAL_PSP_KEYS: npg-paypal-psp-keys
     NPG_BANCOMATPAY_PSP_KEYS: npg-bancomatpay-psp-keys
     NPG_MYBANK_PSP_KEYS: npg-mybank-psp-keys
+    WALLET_STORAGE_CONNECTION_STRING: wallet-storage-connection-string
   keyvault:
     name: "pagopa-u-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
