--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -2,6 +2,23 @@ microservice-chart:
   namespace: "ecommerce"
   nameOverride: ""
   fullnameOverride: ""
+  canaryDelivery:
+    create: true
+    ingress:
+      create: true
+      canary:
+        type: bluegreen
+    service:
+      create: true
+    deployment:
+      create: true
+      image:
+        repository: pagopadcommonacr.azurecr.io/pagopaecommercetransactionsservice
+        tag: "latest"
+        pullPolicy: Always
+      envConfig:
+        NODO_HOSTNAME: https://api.dev.platform.pagopa.it
+        ECS_SERVICE_NAME: pagopa-ecommerce-transactions-service-beta
   image:
     repository: pagopadcommonacr.azurecr.io/pagopaecommercetransactionsservice
     tag: "1.28.3" #improve
@@ -186,7 +203,3 @@ microservice-chart:
                 operator: In
                 values:
                   - user
-  canaryDelivery:
-    deployment:
-      image:
-        tag: ""
