chore(conf): add mooney as paypal psp

--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -152,7 +152,7 @@ microservice-chart:
     NPG_READ_TIMEOUT: "10000"
     NPG_CONNECTION_TIMEOUT: "10000"
     NPG_CARDS_PSP_LIST: "BCITITMM,CIPBITMM,BIC36019,UNCRITMM,BPPIITRRXXX,PPAYITR1XXX,BNLIITRR"
-    NPG_PAYPAL_PSP_LIST: "BCITITMM"
+    NPG_PAYPAL_PSP_LIST: "BCITITMM,SIGPITM1XXX"
     NPG_MYBANK_PSP_LIST: "BCITITMM"
     NPG_BANCOMATPAY_PSP_LIST: "BCITITMM"
     NPG_AUTHORIZATION_REQUEST_TIMEOUT_SECONDS: "60"
