--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,7 @@ ecommercePaymentMethods.uri=${ECOMMERCE_PAYMENT_METHODS_URI}
 ecommercePaymentMethods.readTimeout=${ECOMMERCE_PAYMENT_METHODS_READ_TIMEOUT}
 ecommercePaymentMethods.connectionTimeout=${ECOMMERCE_PAYMENT_METHODS_CONNECTION_TIMEOUT}
 ecommercePaymentMethods.apiKey=${ECOMMERCE_PAYMENT_METHODS_APY_KEY}
+ecommercePaymentMethods.v2.uri=${ECOMMERCE_PAYMENT_METHODS_URI_V2}
 
 wallet.uri=${WALLET_URI}
 wallet.readTimeout=${WALLET_READ_TIMEOUT}
