--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -13,10 +13,11 @@ nodoPerPM.uri=https://localhost/nodo/informazioniPagamento
 nodoPerPM.readTimeout=10000
 nodoPerPM.connectionTimeout=10000
 
-ecommercePaymentMethods.uri=https://localhost/nodo
+ecommercePaymentMethods.uri=https://localhost/paymentMethods
 ecommercePaymentMethods.readTimeout=10000
 ecommercePaymentMethods.connectionTimeout=10000
 ecommercePaymentMethods.apiKey=payment-method-api-key
+ecommercePaymentMethods.v2.uri=https://localhost/paymentMethods
 
 wallet.uri=https://localhost/wallet
 wallet.readTimeout=10000
