--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,7 @@ ECOMMERCE_PAYMENT_METHODS_URI="http://pagopa-ecommerce-payment-methods-service:8
 ECOMMERCE_PAYMENT_METHODS_READ_TIMEOUT=10000
 ECOMMERCE_PAYMENT_METHODS_CONNECTION_TIMEOUT=10000
 ECOMMERCE_PAYMENT_METHODS_APY_KEY=payment-method-api-key
+ECOMMERCE_PAYMENT_METHODS_URI_V2="http://pagopa-ecommerce-payment-methods-service:8080/v2"
 
 WALLET_URI="http://pagopa-wallet-service:9090"
 WALLET_READ_TIMEOUT=10000
