--- a/pom.xml
+++ b/pom.xml
@@ -319,7 +319,7 @@
                         </configuration>
                     </execution>
                     <execution>
-                        <id>payment-methods-api</id>
+                        <id>payment-methods-api-v1</id>
                         <goals>
                             <goal>generate</goal>
                         </goals>
@@ -337,6 +337,28 @@
                             </configOptions>
                             <modelPackage>it.pagopa.generated.ecommerce.paymentmethods.v1.dto</modelPackage>
                             <apiPackage>it.pagopa.generated.ecommerce.paymentmethods.v1.api</apiPackage>
+                            <modelNameSuffix>dto</modelNameSuffix>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>payment-methods-api-v2</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <inputSpec>https://raw.githubusercontent.com/pagopa/pagopa-infra/CHK-2798-openapi-multi-fee/src/domains/ecommerce-app/api/ecommerce-payment-methods-service/v2/_openapi.json.tpl</inputSpec>
+                            <generatorName>java</generatorName>
+                            <library>webclient</library>
+                            <generateApiDocumentation>false</generateApiDocumentation>
+                            <generateApiTests>false</generateApiTests>
+                            <generateModelTests>false</generateModelTests>
+                            <generateSupportingFiles>true</generateSupportingFiles>
+                            <configOptions>
+                                <swaggerAnnotations>false</swaggerAnnotations>
+                                <openApiNullable>false</openApiNullable>
+                            </configOptions>
+                            <modelPackage>it.pagopa.generated.ecommerce.paymentmethods.v2.dto</modelPackage>
+                            <apiPackage>it.pagopa.generated.ecommerce.paymentmethods.v2.api</apiPackage>
                             <modelNameSuffix>dto</modelNameSuffix>
                         </configuration>
                     </execution>
